<resources>
    <!-- General -->
    <string name="app_name">NewsSwipe</string>
    <string name="API_KEY">7d127856d20d4cfd830aca5f42dfa305</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Login Activity -->
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="Create_account_text">Create account</string>
    <string name="hint_email">Email</string>
    <string name="guest_text">Continue as a Guest</string>
    <string name="try_login_without_full_informations">Please fill the required fields !</string>
    <string name="register_while_logged_in">Please log out before trying to register !</string>
    <string name="login_successful">Successful login !</string>
    <string name="registration_successful">Successfully registered !</string>
    <string name="login_error">Incorrect email or password</string>
    <string name="register_error">Error while registering</string>

    <!-- News Activity -->
    <string name="hint_keyword">Keyword</string>
    <string name="info">Swipe right or left</string>
    <string name="welcome">Welcome</string>
    <string name="guest">Guest</string>



    <!-- Settings Activity -->
    <string name="settings">Settings</string>
    <string name="application_language">Application language</string>
    <string name="news_language">News language</string>
    <string name="add_keyword">Add keyword</string>
    <string name="back_button">Back</string>

    <string name="error_empty_keyword">Error, you have to write a keyword before !</string>
    <string name="error_keyword_already_exist">This keyword is already in the list !</string>

    <string name="keyword_add_error">Error while adding keyword</string>
    <string name="keyword_add_success">keyword added successfully</string>

    <string name="keyword_delete_error">Error while deleting keyword</string>
    <string name="keyword_delete_success">keyword successfully deleted</string>

    <string name="notification_description">Notification</string>
    <string name="delete_description">Delete</string>



    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>