<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_login">


    <EditText
        android:id="@+id/password"
        android:layout_width="343dp"
        android:layout_height="60dp"
        android:background="@color/bg_button"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.066"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="343dp"
        android:layout_height="60dp"
        android:background="@color/bg_button"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/hint_email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.067"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_button"
        android:text="@string/Create_account_text"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


    <Button
        android:id="@+id/guest_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/guest_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />
</androidx.constraintlayout.widget.ConstraintLayout>