<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@drawable/fond_login">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fooFragment"
            android:name="com.example.newsswipe.ui.fragments.SwipeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_swipe" />




    </LinearLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/username"
        android:layout_width="343dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/blue_button_dark"
        android:textAllCaps="false"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_button_dark"
        android:text="@string/settings"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_button_dark"
        android:text="Search"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

</androidx.constraintlayout.widget.ConstraintLayout>